tests/syntax_error/local_var_comma.jou
def main() -> int:
    x, = 0  # Error: expected another variable name after ',' (example: "foo, bar: int"), got ':'
